<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="content_provider_authority">com.skichrome.realestatemanager.fileprovider</string>

    <!-- DEBUG -->
    <string name="realty_fragment_name">Realty</string>

    <!-- Toolbar and Navigation drawer Menu -->
    <string name="menu_item_add_name">Add</string>
    <string name="menu_item_edit_name">Edit</string>
    <string name="menu_item_search_name">Search</string>
    <string name="menu_drawer_item_map_title">map</string>
    <string name="menu_drawer_item_settings_title">Settings</string>

    <!-- images contentDescriptions -->
    <string name="realty_preview_picture_content_desc">This is a preview picture of a realty</string>
    <string name="rv_realty_picture_content_desc">Picture of a realty added by the user</string>
    <string name="rv_add_picture_content_desc">Click here to add new picture into picture list</string>

    <!-- Add Realty Fragment -->
    <string name="add_realty_frag_hint_desc">Description</string>
    <string name="add_realty_frag_hint_address">Address</string>
    <string name="add_realty_frag_hint_city">City</string>
    <string name="add_realty_frag_hint_postcode">Postcode</string>
    <string name="add_realty_frag_hint_price">Price</string>
    <string name="add_realty_frag_hint_surface">Surface</string>
    <string name="add_realty_frag_hint_type">Type</string>
    <string name="add_realty_frag_hint_rooms">Rooms</string>
    <string name="add_realty_frag_hint_creation_date">Creation date</string>
    <string name="add_realty_frag_hint_sold_date">Sold date</string>
    <string name="add_realty_frag_hint_status">Status</string>
    <string name="add_realty_frag_hint_agent">Agent</string>
    <string name="add_realty_frag_recycler_view_title">Realty pictures</string>
    <string name="add_realty_frag_btn_submit">Submit</string>
    <string name="add_realty_fragment_edit_text_input_tag">required_input</string>
    <string name="add_realty_fragment_edit_text_created_date_input_tag">created_date_input</string>
    <string name="add_realty_fragment_edit_text_sold_date_input_tag">sold_date_input</string>
    <string name="add_realty_frag_error_input_field">Required field</string>
    <string name="add_realty_fragment_btn_set_date">set</string>

    <string-array name="add_realty_frag_hint_status_spinner">
        <item name="add_realty_frag_hint_status_false">Available</item>
        <item name="add_realty_frag_hint_status_true">Sold</item>
    </string-array>

    <string-array name="realty_picture_type">
        <item name="type_facade">Facade</item>
        <item name="type_lounge">Lounge</item>
        <item name="type_bathroom">Bathroom</item>
        <item name="type_kitchen">Kitchen</item>
        <item name="type_bedroom">Bedroom</item>
        <item name="type_living">Living room</item>
        <item name="type_library">Library</item>
        <item name="type_garden">Garden</item>
        <item name="type_desktop">Desktop</item>
        <item name="type_Hall">Hall</item>
        <item name="type_cellar">Cellar</item>
    </string-array>

    <!-- Database pre-fill -->
    <string-array name="realty_categories">
        <item name="type_flat">Flat</item>
        <item name="type_penthouse">Penthouse</item>
        <item name="type_mansion">Mansion</item>
        <item name="type_house">House</item>
        <item name="type_duplex">Duplex</item>
    </string-array>

    <string-array name="near_realty_poi">
        <item name="poi_school">School</item>
        <item name="poi_gas">Gas Station</item>
        <item name="poi_trade">Trade</item>
        <item name="poi_park">Park</item>
        <item name="poi_cash">Cash Machine</item>
    </string-array>

    <!-- Delete Picture Alert Dialog -->
    <string name="delete_picture_alert_title">Warning</string>
    <string name="delete_picture_alert_message">Do you really want to delete this picture ?</string>
    <string name="delete_picture_alert_confirm">Yes</string>
    <string name="delete_picture_alert_cancel">No</string>

    <!-- Picture type selection Alert Dialog -->
    <string name="select_picture_type_alert_title">Picture type</string>
    <string name="select_picture_type_alert_message">Witch type of picture are you taking ?</string>
    <string name="select_picture_type_alert_confirm">OK</string>
    <string name="select_picture_type_alert_cancel">Cancel</string>

    <!-- Realty Details Fragment -->
    <string name="realty_details_fragment_surface_title">surface</string>
    <string name="realty_details_fragment_rooms_title">Rooms</string>
    <string name="realty_details_fragment_location_title">Location</string>

    <!-- Long text simulation -->
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non lectus id augue vulputate porta non vitae felis. Aliquam facilisis orci ut justo blandit, nec eleifend libero pharetra. Etiam tortor mauris, ultricies et eros sit amet, semper lacinia justo. Nunc quis urna erat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris vel finibus orci. Proin quam lorem, cursus a felis ut, ultrices fringilla metus. Maecenas sed neque et lectus dictum feugiat sit amet a diam. Proin in nibh leo. Integer quam magna, varius vel leo ac, lacinia pulvinar lacus. Morbi a odio in purus interdum efficitur eget vitae dolor. Sed tempor id tellus ac luctus. Sed porta leo tortor, nec sodales dui pharetra sit amet. Donec aliquet lacus aliquet leo tempus, tempor faucibus sapien luctus.
    </string>

    <string name="lorem_ipsum_long">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non lectus id augue vulputate porta non vitae felis. Aliquam facilisis orci ut justo blandit, nec eleifend libero pharetra. Etiam tortor mauris, ultricies et eros sit amet, semper lacinia justo. Nunc quis urna erat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris vel finibus orci. Proin quam lorem, cursus a felis ut, ultrices fringilla metus. Maecenas sed neque et lectus dictum feugiat sit amet a diam. Proin in nibh leo. Integer quam magna, varius vel leo ac, lacinia pulvinar lacus. Morbi a odio in purus interdum efficitur eget vitae dolor. Sed tempor id tellus ac luctus. Sed porta leo tortor, nec sodales dui pharetra sit amet. Donec aliquet lacus aliquet leo tempus, tempor faucibus sapien luctus.

        Integer pulvinar tellus eu felis tincidunt laoreet. Duis aliquam condimentum lectus, quis eleifend erat viverra ac. Proin lacinia egestas ipsum. Aliquam vestibulum nisl eu enim fermentum, non efficitur lectus lobortis. Suspendisse finibus dolor nec elit imperdiet, non consequat sem sodales. Sed accumsan sapien sit amet elit faucibus vulputate. Donec quis gravida justo, vitae viverra leo. Integer sodales libero lorem, in iaculis felis aliquam at. Aenean auctor tortor dui, eu viverra arcu tincidunt vitae. Mauris id tempus purus, in tempor erat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla a faucibus mauris. In vehicula placerat mollis. Nulla id orci eget metus finibus gravida at vel ex.

        Integer quis quam vel ligula egestas lacinia tincidunt vel mi. Integer dictum lectus lacus, sodales varius arcu suscipit sed. Nullam a nisi sagittis, dignissim enim vitae, porttitor ipsum. Maecenas laoreet varius posuere. Mauris non sollicitudin mi. Praesent consequat semper neque, tempor euismod nisl vulputate nec. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin nunc quam, tincidunt in iaculis vel, dapibus id arcu.

        Integer vel hendrerit sapien, non sodales nisl. Maecenas sed nibh nec eros tempus scelerisque quis non libero. Fusce sed sapien consectetur, venenatis justo sit amet, egestas sem. Pellentesque ut efficitur leo. Vestibulum sagittis volutpat mollis. In et maximus orci. Morbi fermentum mollis malesuada. Suspendisse potenti. Nam interdum leo sed tincidunt ultricies. Ut finibus lorem ac tellus posuere, at commodo urna feugiat. Integer et turpis nec leo mattis consequat. Cras justo felis, auctor sed mattis vitae, luctus nec ligula. In elementum velit ornare dolor auctor, vel congue odio posuere. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ultrices vehicula malesuada.

        Quisque eu fermentum ex. Vestibulum volutpat sapien sit amet sapien feugiat ultricies. Pellentesque non dapibus dolor. Aenean non scelerisque dui, et aliquet sapien. Mauris quis maximus sem. Vestibulum quis metus molestie, sodales lacus eu, lobortis ipsum. Sed sed orci semper, pharetra odio quis, imperdiet eros. Aliquam et eros efficitur ante imperdiet rutrum. Sed magna libero, aliquam scelerisque pulvinar id, sodales in ligula. Phasellus id enim ut ex tincidunt consectetur. Aliquam sagittis, mi nec sodales maximus, mauris odio dignissim risus, et pulvinar ante neque et libero. Aenean venenatis iaculis libero a aliquam. Etiam ut nunc vitae augue suscipit vulputate. Curabitur elementum metus quis ipsum consequat, quis mattis lectus feugiat. Mauris rhoncus varius aliquam. Sed id ante lacinia, rhoncus leo at, condimentum sem.
    </string>

    <!-- Realty details Fragment -->
    <string name="realty_details_fragment_description_title">Description</string>
    <string name="realty_details_fragment_medias_title">Medias</string>

    <!-- Settings Fragment -->
    <string name="settings_fragment_category_credentials">Credentials</string>
    <string name="settings_fragment_category_notification">Notifications</string>

    <string name="settings_fragment_username_title">Username</string>
    <string name="settings_fragment_username_summary">Select your username to identify you on this system</string>
    <string name="settings_fragment_username_key">agentUsername</string>

    <string name="settings_fragment_notification_title">New realty inserted notification</string>
    <string name="settings_fragment_notification_summary">Modify notification settings in system settings</string>
    <string name="settings_fragment_notification_key">notification</string>

    <!-- System Notification -->
    <string name="notification_description">Be notified when the app has successfully saved your real estate.</string>
    <string name="notification_channel_name">Content saved notification</string>
    <string name="notification_content_text_inserted">Successfully inserted !</string>
    <string name="notification_content_text_updated">Successfully updated !</string>

    <!-- Agent alertDialog related strings -->
    <string name="current_user_actions_change">Logout and quit</string>
    <string name="current_user_actions_alert_dialog_title">Select your profile</string>
    <string name="current_user_actions_alert_dialog_positive_btn">Apply</string>
    <string name="current_user_actions_alert_dialog_new_agent">Enter new agent name</string>
</resources>