<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addRealtyFragment"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/menu_item_add_name"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_edit_24dp"
        android:title="@string/menu_item_edit_name"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchMenuItem"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/menu_item_search_name"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
</menu>